objects/Student_Programme__c.object
<CustomObject><fields>
<fields>
        <fullName>End_Date__c</fullName>
        <description>For PGR HESA return</description>
        <inlineHelpText>Use where Student Programme End Date is not the same as Programme End Date (eg. PGR, DipUKMP)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>English_Language_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As requested by RR, 20th Oct</description>
        <inlineHelpText>Tick this box after checking the English language information provided, including attachments if applicable</inlineHelpText>
        <label>English Language Checked</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Enrolment_Date__c</fullName>
        <description>DipUKMP only field</description>
        <label>Enrolment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Entitled_to_support_services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SAF field 'Support services (disability support; counselling and mental health advisory services; immigration advice)'</inlineHelpText>
        <label>Entitled to support services</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Entry_Option__c</fullName>
        <description>Entry Award Option chosen by Student. Set to MSc on creation by Entry Option workflow where Programme Type = MSc Programme</description>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Entry Option</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Ethics_Application_Status__c</fullName>
        <description>Status of Ethics Application</description>
        <inlineHelpText>Enter the Ethics Application status</inlineHelpText>
        <label>Ethics Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Ethics_Approval_Status__c</fullName>
        <label>Ethics Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved (subject to in-country EA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved (subject to clarifications)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Ethics_Chair_Review__c</fullName>
        <inlineHelpText>Date reviewed by Chair of Ethics Panel</inlineHelpText>
        <label>Ethics Chair Review</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Ethics_Full_Approval__c</fullName>
        <description>Date of Panel Review</description>
        <inlineHelpText>Date full ethics approval letter sent</inlineHelpText>
        <label>Ethics Full Approval</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Ethics_Notes__c</fullName>
        <label>Ethics Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Ethics_Panel_Date__c</fullName>
        <description>Date of Ethics Panel</description>
        <inlineHelpText>Date of Ethics Panel</inlineHelpText>
        <label>Ethics Panel Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Ethics_in_country_Status__c</fullName>
        <label>Ethics (in-country) Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Ethnic_Origin__c</fullName>
        <label>Ethnic Origin</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy or Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British - Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British - African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Black Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British - Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Asian Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed - White and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mixed Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Ethnic Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Example_Multiselect__c</fullName>
        <label>Example Multiselect</label>
        <picklist>
            <picklistValues>
                <fullName>Atlantis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magenta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saffron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paisley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malachite</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Exit_Option__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Exit Option</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Expected_Duration__c</fullName>
        <description>DipUKMP application required field</description>
        <label>Expected Duration (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Expected_study_pattern_LSTM_Off_site__c</fullName>
        <inlineHelpText>SAF field 'The expected study pattern with respect to time spent at LSTM and the offsite location(s)'</inlineHelpText>
        <label>Expected study pattern (LSTM/Off-site)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Expires__c</fullName>
        <formula>Programme__r.AD_Expiry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looku</inlineHelpText>
        <label>Expires</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Explain_how_suitability_candidate_found__c</fullName>
        <inlineHelpText>SAF field 'If 'No', explain how suitability of candidate has been established.'</inlineHelpText>
        <label>Explain how suitability candidate found</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>External_Form_Read_Only__c</fullName>
        <label>External Form Read Only</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <inlineHelpText>Current use: UoL persistent ID for PGR HESA students</inlineHelpText>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>External_Stage__c</fullName>
        <formula>If (  Text( Stage__c ) = "Draft", 
      "Draft",
      If (OR (  Text(Stage__c) = "Submitted", Text(Stage__c) = "Incomplete", Text(Stage__c) = "Checked", Text(Stage__c) = "Reviewed"),
            "Submitted", 
            IF ( OR ( Text(Stage__c) = "Conditional", Text(Stage__c) = "Unconditional", Text(Stage__c) = "Accepted"),
                 "Offers",
                 If ( Text(Stage__c) = "Reject", 
                      "Rejected", 
                      If ( OR ( Text(Stage__c) = "Expected", Text(Stage__c) = "Pre-Registered", Text(Stage__c) = "Registered"),
                           "Registration",
                           "Completed"
                         )
                     )
               )
          )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Stage</label>
        <type>Text</type>
    </fields><fields>
        <fullName>FA_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Records the number of application visits by applicant</description>
        <label>FA Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>FA_Revisit__c</fullName>
        <description>Set by FA Push Connector. If FA_Count is greater than 0 or blank, give True. Pulled back to FA to prefill FA Revisit field. Used for DipUKMP form.</description>
        <formula>IF(FA_Count__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FA Revisit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FA_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmed form submission from FA</description>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>FA Submission</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>FCO_Travel_Authorisation__c</fullName>
        <description>Records the current advice from the FCO about travel to the host country for the proposed project</description>
        <inlineHelpText>Select the current FCO advice about travel to the host country</inlineHelpText>
        <label>FCO Travel Authorisation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Fee_Discount__c</fullName>
        <description>Amount of discount to be applied to the final invoice</description>
        <inlineHelpText>Enter the discount to be applied to the final invoice</inlineHelpText>
        <label>Fee Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Fee_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total fee paid</description>
        <inlineHelpText>Enter the total fee paid</inlineHelpText>
        <label>Fee Paid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Fee_Recalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Recalc</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Fee_Status_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True by Fee Status Update process when internal user overrides Fee Status</description>
        <label>Fee Status Override</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Fee_Status_Student__c</fullName>
        <formula>IF(ISNULL(Student__r.HESA_Nationality__c),"None Set",
IF(AND(NOT(ISNULL(Student__r.HESA_Nationality__c)),EEAStudent__c=FALSE),"Overseas",
IF(AND(NOT(ISNULL(Student__r.HESA_Nationality__c)),EEAStudent__c=TRUE),"Home/EU","Error")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fee Status according to Student Nationality</inlineHelpText>
        <label>Fee Status (Student)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Fee_Status__c</fullName>
        <description>Default is Null, to trigger workflow ref to Student EEA setting (taken from HESA table); LSTM Admin can override this manually if needed and workflow will not re-trigger (unless set back to null)</description>
        <inlineHelpText>Taken from HESA Nationality choice on Student record; can be manually changed to other value if Fee score dictates</inlineHelpText>
        <label>Fee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home/EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Fees_and_Funding__c</fullName>
        <inlineHelpText>Self Financing includes payment by a family member on your behalf. If you are being sponsored for the course, please send a letter of agreement from your sponsor as soon as possible.</inlineHelpText>
        <label>Fees and Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Fully sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partly sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financed by self and/or family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRC Doctoral Training Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Form_3_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Form 3 has been submitted</inlineHelpText>
        <label>Form 3 (Travel Arrangements)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Form_4_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Form 4 has been submitted</inlineHelpText>
        <label>Form 4 (Insurance)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Form_5_Costing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Form 5 has been received</inlineHelpText>
        <label>Form 5 (Costing)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Future_Plans__c</fullName>
        <label>What do you hope to gain from studies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>GMC_Number__c</fullName>
        <description>DipUKMP application required field</description>
        <label>GMC Number</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grading_Scheme__c</fullName>
        <formula>Programme__r.Programme_Version__r.Grading_Scheme__c</formula>
        <label>Grading Scheme</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Audit__c</fullName>
        <formula>IF ( Programme__r.Programme_Version__r.Master_Link__r.HESA_Audit__c = TRUE,
   If (  Test_Record__c = False, TRUE, FALSE ),
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates this Programme will be included in the HESA audit; take from the associated Master Programme Version setting</inlineHelpText>
        <label>HESA Audit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Disability__c</fullName>
        <formula>IF( ISPICKVAL( Disability__c , "No known disability") , 
"00", 
IF( ISPICKVAL( Disability__c , "Blind/partially sighted") , 
"02", 
IF( ISPICKVAL( Disability__c , "Deaf/hearing impairment") , 
"03", 
IF( ISPICKVAL( Disability__c , "Wheelchair user/mobility difficulties") , 
"04", 
IF( ISPICKVAL( Disability__c , "Personal care support") , 
"05", 
IF( ISPICKVAL( Disability__c , "Mental health difficulties") , 
"06", 
IF( ISPICKVAL( Disability__c , "An unseen disability, e.g. diabetes, epilepsy, asthma") , 
"07", 
IF( ISPICKVAL( Disability__c , "Two or more impairments and/or disabling medical conditions") , 
"08", 
IF( ISPICKVAL( Disability__c , "Autistic Spectrum Disorder") , 
"10", 
IF( ISPICKVAL( Disability__c , "A specific learning difficulty e.g. dyslexia") , 
"11", 
IF( ISPICKVAL( Disability__c , "A specific learning difficulty such as dyslexia, dyspraxia or AD(H)D") , 
"51", 
IF( ISPICKVAL( Disability__c , "A social/communication impairment such as Asperger's syndrome/other autistic spectrum disorder") , 
"53", 
IF( ISPICKVAL( Disability__c , "A long standing illness or health condition such as cancer, HIV, diabetes, chronic heart disease, or epilepsy") , 
"54", 
IF( ISPICKVAL( Disability__c , "A mental health condition, such as depression, schizophrenia or anxiety disorder") , 
"55", 
IF( ISPICKVAL( Disability__c , "A physical impairment or mobility issues, such as difficulty using arms or using a wheelchair or crutches") , 
"56", 
IF( ISPICKVAL( Disability__c , "Deaf or a serious hearing impairment") , 
"57", 
IF( ISPICKVAL( Disability__c , "Blind or a serious visual impairment uncorrected by glasses") , 
"58", 
IF( ISPICKVAL( Disability__c , "A disability, impairment or medical condition that is not listed above") , 
"96", 
IF( ISPICKVAL( Disability__c , "Information refused") , 
"97", 
IF( ISPICKVAL( Disability__c , "Information not sought") , 
"98", 
IF( ISPICKVAL( Disability__c , "Not known") , 
"99", 
"00")))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HESA Disability</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Ethnicity__c</fullName>
        <formula>IF( ISPICKVAL(Ethnic_Origin__c , "White"),
"10",
IF( ISPICKVAL(Ethnic_Origin__c , "Gypsy or Traveller"),
"15", 
IF( ISPICKVAL(Ethnic_Origin__c , "Black or Black British - Caribbean"),
"21", 
IF( ISPICKVAL(Ethnic_Origin__c , "Black or Black British - African"),
"22", 
IF( ISPICKVAL(Ethnic_Origin__c , "Other Black background"),
"29", 
IF( ISPICKVAL(Ethnic_Origin__c , "Asian or Asian British - Indian"),
"31", 
IF( ISPICKVAL(Ethnic_Origin__c , "Asian or Asian British - Pakistani"),
"32", 
IF( ISPICKVAL(Ethnic_Origin__c , "Asian or Asian British - Bangladeshi"),
"33", 
IF( ISPICKVAL(Ethnic_Origin__c , "Chinese"),
"34", 
IF( ISPICKVAL(Ethnic_Origin__c , "Other Asian background"),
"39", 
IF( ISPICKVAL(Ethnic_Origin__c , "Mixed - White and Black Caribbean"),
"41", 
IF( ISPICKVAL(Ethnic_Origin__c , "Mixed - White and Black African"),
"42", 
IF( ISPICKVAL(Ethnic_Origin__c , "Mixed - White and Asian"),
"43", 
IF( ISPICKVAL(Ethnic_Origin__c , "Other mixed background"),
"49", 
IF( ISPICKVAL(Ethnic_Origin__c , "Arab"),
"50", 
IF( ISPICKVAL(Ethnic_Origin__c , "Other ethnic background"),
"80", 
IF( ISPICKVAL(Ethnic_Origin__c , "Not known"),
"90", 
IF( ISPICKVAL(Ethnic_Origin__c , "Information refused"),
"98", 
"90"))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HESA Ethnicity</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Excluded__c</fullName>
        <formula>Audit_Log__r.Exclude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HESA Excluded</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_FTE__c</fullName>
        <label>HESA FTE</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>HESA_Fee_Status__c</fullName>
        <description>HESA Fee Status</description>
        <label>HESA Fee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home/EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Island/Overseas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Fundable__c</fullName>
        <description>HESA Student Fundable</description>
        <label>HESA Fundable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Type_Year_temp__c</fullName>
        <description>Temporary field for 15/16 HESA PGR return</description>
        <label>HESA Type Year (temp)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>HUSID__c</fullName>
        <description>formula lookup to student record</description>
        <formula>Student__r.HUSID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>taken from student record</inlineHelpText>
        <label>HUSID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Health_Advice__c</fullName>
        <description>Indicates the status of travel health advice</description>
        <inlineHelpText>Select the status of the travel health advice indicated by the student</inlineHelpText>
        <label>Travel Health Advice</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted OH Form 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intends to follow WTC advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not intend to follow WTC advice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Highest_qualification_on_entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From: https://www.hesa.ac.uk/index.php?option=com_studrec&amp;task=show_file&amp;mnl=15051&amp;href=a^_^QUALENT3.html</description>
        <inlineHelpText>Values from HESA definition</inlineHelpText>
        <label>Highest qualification on entry</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HESA_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>QUALENT3</value>
            </filterItems>
            <filterItems>
                <field>HESA_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Student Programmes (Highest qualification on entry)</relationshipLabel>
        <relationshipName>Student_Programmes1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>HomeDrive__c</fullName>
        <formula>"P:"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeDrive</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Host_Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fieldwork Host Organisation</description>
        <inlineHelpText>Select the Host Organisation contact</inlineHelpText>
        <label>Host Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Host Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Programmes (Host Organisation)</relationshipLabel>
        <relationshipName>Student_Programmes3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_Course_Specify__c</fullName>
        <label>How did you hear about Course - Specify</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>How_did_you_hear_about_this_Course__c</fullName>
        <inlineHelpText>Please indicate how you heard about this Programme / Course</inlineHelpText>
        <label>How did you hear about this Course?</label>
        <picklist>
            <picklistValues>
                <fullName>I have previously studied at LSTM (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From a colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From a previous LSTM student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement in (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Journal (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Exhibition/Careers Fair (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEC Abroad (Study Agency)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Website (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>How_does_programme_connect_to_career_pla__c</fullName>
        <inlineHelpText>Please describe how the programme connects to your future aims or career plan</inlineHelpText>
        <label>How does application fit with career</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Identification_Check__c</fullName>
        <description>Used within Registration process</description>
        <label>Identification Check</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>If_Sponsored_applied_for_sponsorship__c</fullName>
        <description>If Sponsored, have you applied for a scholarship/sponsorship?</description>
        <label>If Sponsored, applied for sponsorship?</label>
        <picklist>
            <picklistValues>
                <fullName>I have secured sponsorship/funding for my intended programme of study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have applied for sponsorship/funding to undertake my intended programme of study and my application is pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I need to apply for sponsorship/funding to undertake my intended programme of study</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>If_Sponsored_indicate_the_following__c</fullName>
        <inlineHelpText>a) I am currently searching for sponsorship opportunities
b) I am waiting for a decision on a sponsorship application which is due by (please specify)
c) My sponsorship application has been approved</inlineHelpText>
        <label>If Sponsored, indicate the following</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Immigration_Check__c</fullName>
        <description>Used within Registration process</description>
        <label>Immigration Check</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>In_country_approval__c</fullName>
        <inlineHelpText>Date in-country approval approved by Chair</inlineHelpText>
        <label>In-country approval</label>
        <type>Date</type>
    </fields><fields>
        <fullName>In_principle_approval__c</fullName>
        <inlineHelpText>Date ethics application approved in principle</inlineHelpText>
        <label>In principle approval</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Include_research_w_NHS_Trust_resources__c</fullName>
        <inlineHelpText>SAF field 'Include research requiring NHS Trust resources?'</inlineHelpText>
        <label>Include research w/ NHS Trust resources?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Induction_info_relevant_to_off_site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SAF field 'Induction information relevant to the off-site location, including Health and Safety'</inlineHelpText>
        <label>Induction info relevant to off-site</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Instalment_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Fee for payment plan</description>
        <inlineHelpText>Enter fee for approved payment plan</inlineHelpText>
        <label>Instalment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Instance_Code__c</fullName>
        <formula>Programme__r.Instance_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Intend_to_Take_English_Language_Test__c</fullName>
        <label>Intend to Take English Language Test</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Intended_Sponsorship_funding__c</fullName>
        <label>Intended Sponsorship/funding</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Intercalation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick if this application meets LSTM intercalation requirements</inlineHelpText>
        <label>Intercalation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Intercalation_year_of_study__c</fullName>
        <inlineHelpText>Should be 1 unless Student has taken a year out
Drives YEARSTU field in HESA return</inlineHelpText>
        <label>Intercalation year of study</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Interviewed_the_candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SAF field 'Have you interviewed the candidate?'</inlineHelpText>
        <label>Interviewed the candidate?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Invoice_Amount__c</fullName>
        <formula>Amount__c  +  Academic_Credit_Fee__c -  Fee_Paid__c - Scholarship_Awarded__c -  Fee_Discount__c + Overseas_Project_Fee__c + Instalment_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total = Fee + Academic Credit Fee (if applicable)</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Involve_human_materials_LSTM_HMI__c</fullName>
        <inlineHelpText>SAF field 'Involve human materials or information that must be registered with the LSTM HMI Officer'</inlineHelpText>
        <label>Involve human materials, LSTM HMI?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>JACS_Code__c</fullName>
        <label>JACS Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>    </validationRules></CustomObject>